Add test for SyncToken updates in 2D canvas GpuMemoryBuffer code path

This change adds a test and also re-arranges the fix from previous CL:
https://chromium-review.googlesource.com/c/chromium/src/+/832350

BUG=796079,795635

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Iff30eeebaf72bb4dc34be0dc7bd4afc3fc2e9ced
Reviewed-on: https://chromium-review.googlesource.com/836752
Commit-Queue: Justin Novosad <junov@chromium.org>
Reviewed-by: Olivia Lai <xlai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528423}
Former-commit-id: 1fd5440ed9a178828fcc752bc1b180c3ad715086